<resources>
    <string name="title_flow_activity_main">FlowMainActivity</string>

    <!--  Titles  -->
    <string name="title_compare_flow">Compare</string>
    <string name="title_example1">Simple example</string>
    <string name="title_example2">Other example</string>
    <string name="title_example3">StateFlow example</string>
    <string name="title_example4">SharedFlow example</string>
    <string name="title_example5">HotFlow vs ColdFlow</string>
    <string name="title_stock_app">Stock App</string>
    <string name="title_stock_app_2">Stock App2</string>
    <string name="title_stock_app_3">Stock App3</string>
    <string name="title_stock_app_4">Stock App4</string>

    <!--  Flow Examples  -->
    <string name="example_text">Check the log\n|\nV</string>

    <!--  Hot-Cold Flow  -->
    <string name="button_hot_flow">Hot Flow</string>
    <string name="button_cold_flow">Cold Flow</string>
    <string name="button_hot_flow_without_exception">Hot Flow without CancellationException</string>
    <string name="button_cold_flow_without_exception">Cold Flow without CancellationException</string>

    <!--  Flows names  -->
    <string name="default_name">Hello World</string>
    <string name="live_data">Live Data</string>
    <string name="state_flow">State Flow</string>
    <string name="flow">Flow</string>
    <string name="shared_flow">Shared Flow</string>

</resources>